<resources>
    <string name="facebook_app_id">717896151629214</string>
    <string name="app_name">Clean Basket</string>
    <string name="app_description">Premium Dry Cleaning &amp; Laundry Delivery</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_repeat">Repeat Password</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_authorization_code">Authorization Code</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_email">Email Log In</string>
    <string name="action_sign_in_short">Log In</string>
    <string name="action_next">Next</string>
    <string name="action_done">Done</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="find_password">Search password</string>
    <string name="all_agree">Select All</string>
    <string name="info_service">Terms of Agreement</string>
    <string name="info_protection">Use of Personal Information</string>
    <string name="menu_label_order">Place Order</string>
    <string name="menu_label_delivery">Order Status</string>
    <string name="menu_label_information">My Information</string>
    <string name="menu_label_notification">Notice</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_invalid_password">Incorrect password</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_field_required">Required field</string>
    <string name="error_incorrect_repeat">Incorrect password</string>
    <string name="email_error">Invalid email</string>
    <string name="password_error">Incorrect password</string>
    <string name="disable_error">Unauthorized user</string>
    <string name="account_duplication">Registered User</string>
    <string name="sign_up_success">Successfully Signed In</string>
    <string name="register_inform">Input additional Information\n and Receive Mileage &amp; Coupon</string>
    <string name="authorization_request">Request</string>
    <string name="check_sex">Sex</string>
    <string name="check_environment">Pls Select</string>
    <string name="monetary_unit">KRW</string>
    <string name="range_monetary_unit">KRW ~</string>
    <string name="item_unit">Unit</string>
    <string name="point_unit">Won</string>
    <string name="label_item">Item</string>
    <string name="label_pre_total">Sub total</string>
    <string name="label_total">Total</string>
    <string name="button_next">Next</string>
    <string name="button_order">Order</string>
    <string name="address_empty">Enter Address</string>
    <string name="address_detail_empty">Enter Detailed Address</string>
    <string name="phone_empty">Enter Contact Number</string>
    <string name="datetime_empty">Enter Date</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_card">Credit Card</string>
    <string name="offsite_payment_card">Add Payment</string>
    <string name="payment_cash">Cash</string>
    <string name="payment_transfer">Transfer</string>
    <string name="payment_in_app_finish">In App Card</string>
    <string name="payment_in_app">In App Unpaid</string>
    <string name="pick_up_cost">Delivery Charge</string>
    <string name="sale_label">Special Offer</string>
    <string name="mileage">Mileage</string>
    <string name="mileage_available">Available Mileage</string>
    <string name="coupon">Coupon</string>
    <string name="coupon_invalidate">Infinite</string>
    <string name="special">Special Offer</string>
    <string name="button_label_use">Usage</string>
    <string name="mileage_short">Input Available Mileage</string>
    <string name="area_unavailable_error">Sorry, Service Not Available in Selected Area</string>
    <string name="area_available">Service Available Area</string>
    <string name="date_unavailable_error">Sorry, Service Not Available on Requested Date</string>
    <string name="general_error">Error</string>
    <string name="order_success">Order Completed</string>
    <string name="too_early_time">The minimum order is possible after 1 hour 45 minutes</string>
    <string name="too_late_time">It is too late</string>
    <string name="time_picker_inform">Select Hours</string>
    <string name="time_picker_no_available">Hours Not Available</string>
    <string name="time_separate">:</string>
    <string name="time_tilde"> ~ </string>
    <string name="time_exact">00</string>
    <string name="time_half">30</string>
    <string name="time_today">Today</string>
    <string name="time_tomorrow">Tomorrow</string>
    <string name="time_other_day">Other</string>
    <string name="date_pickup">Pick Up Date</string>
    <string name="date_dropoff">Drop Off Date</string>
    <string name="time_dropoff_inform">Select Pick Up Time</string>
    <string name="time_dropoff_inform_after">Select Drop Off Time</string>
    <string name="time_parse">HH:mm</string>
    <string name="date_parse">MM-dd(EEE)</string>
    <string name="datetime_parse">MM.dd(EEE)</string>
    <string name="coupon_not_available">Use Coupon (Minimum Order of W10,000)</string>
    <string name="address">Address</string>
    <string name="address_district">District</string>
    <string name="address_detail">Details</string>
    <string name="address_search_inform">Area (ex. Xx-dong)</string>
    <string name="address_select">Select Address</string>
    <string name="contact_title">Contact</string>
    <string name="contact">Contact Number</string>
    <string name="memo_hint">Additional Request</string>
    <string name="search_no_text">Search</string>
    <string name="label_confirm">Confirm</string>
    <string name="label_order_history">Order history</string>
    <string name="label_modify">Change</string>
    <string name="label_order_modify">Change Order</string>
    <string name="label_back">Back</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_not_use">Not In Use</string>
    <string name="toast_error">Error</string>
    <string name="network_error">Check Network Status</string>
    <string name="session_invalid">Invalid Session</string>
    <string name="app_exit">Push \'Back\' to Exit Application</string>
    <string name="update_alert_title">Require Update</string>
    <string name="update_alert_message">Require Update</string>
    <string name="update_alert_accept">Update</string>
    <string name="update_alert_exit">Later</string>
    <string name="coupon_info">Coupon</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="setting">Setting</string>
    <string name="service_info">Service Information</string>
    <string name="service_not_available">Invalid Service</string>
    <string name="invalid_lat_long_used">Invalid Location</string>
    <string name="no_address_found">Address Not Found</string>
    <string name="address_found">Address Found</string>
    <string name="no_geocoder_available">Geocoder Not Available</string>
    <string name="set_notification">Notification</string>
    <string name="event_notification">Event Notification</string>
    <string name="order_notification">Order Notification</string>
    <string name="current_version">Current Version</string>
    <string name="latest_version">Latest Version</string>
    <string name="update">Update</string>
    <string name="logout">Log Out</string>
    <string name="logout_confirm">Are you sure to log out?</string>
    <string name="pd_name_default">CleanBasket PD</string>
    <string name="pick_up_label">Pick Up</string>
    <string name="laundry_label">Dry Clean\n Laundry</string>
    <string name="drop_off_label">Drop Off</string>
    <string name="finish_label">Complete</string>
    <string name="pick_up_time_label">Pick Up</string>
    <string name="drop_off_time_label">Drop Off</string>
    <string name="feedback_label">Feedback</string>
    <string name="pick_up_wait">Ready for Pick Up</string>
    <string name="pick_up_man_selected">Ready for Pick Up</string>
    <string name="pick_up_finish">In Progress</string>
    <string name="deliverer_selected">Ready for Drop Off</string>
    <string name="deliverer_finish">Order Completed</string>
    <string name="order_modify">Change/Cancel Order</string>
    <string name="order_cancel_confirm">Like to Cancel Your Order?</string>
    <string name="today">Today</string>
    <string name="pick_up_notification"> Pick Up Notification</string>
    <string name="drop_off_notification"> Drop Off Notification</string>
    <string name="pd_message">Message from PD</string>
    <string name="recommendation_coupon">Coupon Received</string>
    <string name="issue_coupon">Coupon Issued</string>
    <string name="default_name">Items</string>
    <string name="y_shirt">Dress Shirts</string>
    <string name="suit">Suits - 2PC</string>
    <string name="suit_jacket">Blazers</string>
    <string name="suit_pants">Dress Pants</string>
    <string name="woman_suit">Women\'s Suit</string>
    <string name="suit_skirt">Skirt Suit</string>
    <string name="trousers">Pants</string>
    <string name="skirt">Skirts</string>
    <string name="blouse">Blouses</string>
    <string name="one_piece">Dresses</string>
    <string name="coat">Coats</string>
    <string name="long_coat">Long Coats</string>
    <string name="jumper">Jumpers</string>
    <string name="jacket">Jackets</string>
    <string name="sweater">Sweaters</string>
    <string name="school_uniform">Uniforms</string>
    <string name="t_shirt">T-Shirts</string>
    <string name="leather_jumper_long">Leather Jackets(L)</string>
    <string name="leather_jumper_short">Leather Jackets(S)</string>
    <string name="outdoor">Padding Jumper</string>
    <string name="golfwear">Golfwears</string>
    <string name="cardigan">Cardigans</string>
    <string name="vest">Vests</string>
    <string name="korean_clothes">Korean Costume</string>
    <string name="tie">Ties</string>
    <string name="scarf">Scarves</string>
    <string name="muffler">Mufflers</string>
    <string name="silk">Silk - Surcharge</string>
    <string name="hemp">Hemp - Surcharge</string>
    <string name="wool">Wool - Surcharge</string>
    <string name="cashmere">Cashmere - Surcharge</string>
    <string name="bedclothes_single">Comforters - Single</string>
    <string name="bedclothes_double">Comforters - Double</string>
    <string name="bedclothes_queen">Comforters - Queen</string>
    <string name="bedclothes_cover">Bedcloths</string>
    <string name="mustang">Mustang</string>
    <string name="laundry">Wash &amp; Fold</string>
    <string name="tent">Tent</string>
    <string name="curtain">Curtain</string>
    <string name="carpet">Carpet</string>
    <string name="backpack">Backpack</string>
    <string name="luxurybag">Designer Bag</string>
    <string name="ecobag">Eco Bag</string>
    <string name="luxurybag_common">Fabrics Bag</string>
    <string name="ecobag_common">Leather Bag</string>
    <string name="shoes">Shoes</string>
    <string name="boots">Boots</string>
    <string name="leather_shoes">Leather Shoes</string>
    <string name="leather_shoes_man">Leather Shoes(Man)</string>
    <string name="uggboots">Ugg Boots</string>
    <string name="golfshoes">Golf Shoes</string>
    <string name="luxuryshoes">Designer Shoes</string>
    <string name="why1">Laundry Detergent</string>
    <string name="why2">Fabric Conditioner</string>
    <string name="why3">Shower Cleaner</string>
    <string name="why4">Shampoo</string>
    <string name="doll">Doll</string>
    <string name="start">Start</string>
    <string name="qna">Chat with us!</string>
    <string name="qna_header">Ask us anything</string>
    <string name="qna_detail">We are ready for you\n(hours of operation : 10 am ~ 6 pm)</string>
    <string name="call_customer_center"><u>Call Customer Center</u>\n070-7552-1385</string>
</resources>