<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true" />

            <EditText android:id="@+id/password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password"
                android:imeActionId="@+id/use"
                android:imeActionLabel="@string/start"
                android:imeOptions="actionDone" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />

            <EditText android:id="@+id/password_repeat" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password_repeat"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/start"
                android:imeOptions="actionDone" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />

            <CheckedTextView
                android:id="@+id/textview_agree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkMark="?android:attr/textCheckMark"
                android:text="@string/all_agree"
                android:gravity="center_vertical" />

            <CheckedTextView
                android:id="@+id/textview_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkMark="?android:attr/textCheckMark"
                android:text="@string/info_service"
                android:gravity="center_vertical" />

            <CheckedTextView
                android:id="@+id/textview_protection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkMark="?android:attr/textCheckMark"
                android:text="@string/info_protection"
                android:gravity="center_vertical" />

            <Button android:id="@+id/email_register_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_sign_up"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
