<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@android:color/transparent"
    tools:context=".EmailDialog">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                android:layout_height="40dp" android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:imeActionId="@+id/email"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionNext"
                android:singleLine="true"
                style="@style/White.EditText.CleanBasket" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/white" />

            <EditText android:id="@+id/password" android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone" android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                style="@style/White.EditText.CleanBasket" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/white" />

            <Button android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="13dp"
                android:text="@string/action_sign_in"
                style="@style/White.Button.CleanBasket" />

            <Button android:id="@+id/textview_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="13dp"
                android:text="@string/action_sign_up"
                style="@style/White.Button.CleanBasket" />

            <TextView android:id="@+id/textview_find_password" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="13dp" android:text="@string/find_password"
                android:textStyle="bold"
                android:textColor="@color/dialog_text"
                android:gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>