<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/chat_fragment_container"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/imageview_qna"
        android:layout_height="100dp"
        android:layout_width="wrap_content"
        android:layout_above="@+id/button_start_chat"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_qna" />

    <Button
        android:id="@+id/button_start_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/qna"
        android:textColor="@color/text_black"
        android:background="@drawable/round_button_background"/>

    <TextView
        android:id="@+id/textview_qna_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_start_chat"
        android:layout_centerHorizontal="true"
        android:text="@string/qna_header"
        android:textSize="20dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/textview_qna_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_qna_header"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/qna_detail"
        android:gravity="center" />

    <TextView
        android:id="@+id/textview_call_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_qna_detail"
        android:layout_centerHorizontal="true"
        android:text="@string/call_customer_center"
        android:textStyle="bold"
        android:gravity="center" />
</RelativeLayout>